hero section working done

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+
+
+    <!-- Fontawesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -39,8 +45,30 @@
 
     <!-- Main Section  -->
     <main>
+        <!-- hero section  -->
         <section class="hero-section">
+            <div class="btn-grp">
+                <button class="hero-btn"> <img src="./assets/shine.png" alt=""> Early Access Now Open</button>
+            </div>
+            <div class="hero-content">
+                <h1>Structured thinking,<br>
+                    <span>not just note-taking. </span>
+                </h1>
 
+                <p>A private space to store notes, links, and learning summaries — designed to <br>
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+            </div>
+            <div class="btn-grp2">
+                <button class="hero-btn1">Start Building Your Vault <i class="fa-solid fa-arrow-right"></i> </button>
+                <button class="hero-btn2"> <i class="fa-solid fa-play"></i> See How It Works</button>
+            </div>
+        </section>
+
+
+        <!-- card section  -->
+        <section class="container">
+            <h1>Notes don't fail, Structure does.</h1>
+            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
         </section>
     </main>
 </body>
