card section done

--- a/index.html
+++ b/index.html
@@ -67,8 +67,49 @@
 
         <!-- card section  -->
         <section class="container">
-            <h1>Notes don't fail, Structure does.</h1>
-            <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            <div class="card-details">
+                <h1>Notes don't fail, Structure does.</h1>
+                <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
+            </div>
+
+            <div class="container card">
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="./assets/Vector.png" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Scattered notes</h2>
+                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="./assets/Vector.png" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Scattered notes</h2>
+                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="./assets/Vector.png" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Scattered notes</h2>
+                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                </div>
+                <div class="card-content">
+                    <div class="card-img">
+                        <img src="./assets/Vector.png" alt="">
+                    </div>
+                    <div class="card-title">
+                        <h2>Scattered notes</h2>
+                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
