--- a/index.html
+++ b/index.html
@@ -111,6 +111,44 @@
                 </div>
             </div>
         </section>
+
+
+
+        <!-- solution section  -->
+        <section class="container">
+            <div class="solution-content">
+                <div class="solution-img">
+                    <img src="./assets/knowledge.png" alt="">
+                </div>
+                <div class="solution-title">
+                    <div class="solution-details">
+                        <p id="solution-heading">THE SOLUTION</p>
+                        <h1>Your second brain,
+                            structured by design.</h1>
+                        <p id="solution-text">Personal Knowledge Vault isn't another note-taking app. <br> It's a
+                            thinking
+                            environment where
+                            every
+                            note, link, and summary <br> becomes part of an interconnected web of understanding.</p>
+
+                        <p class="solution-list"> <img src="./assets/CheckCircle.png" alt=""> Capture ideas with
+                            structure built-in from day
+                            one</p>
+
+                        <p class="solution-list"> <img src="./assets/CheckCircle.png" alt=""> Connect related concepts
+                            automatically as you
+                            write</p>
+
+                        <p class="solution-list"> <img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge
+                            through reflection
+                            prompts</p>
+
+                        <p class="solution-list"> <img src="./assets/CheckCircle.png" alt=""> Find anything instantly
+                            with semantic search</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
