bottom section done

--- a/index.html
+++ b/index.html
@@ -149,6 +149,24 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- Bottom Section  -->
+        <section class="container ">
+            <div class="bottom-section">
+                <h1>Ready to think more clearly?</h1>
+                <p class="bottom-text">Join thousands of learners who are building their personal knowledge
+                    vaults. Start
+                    free, no credit
+                    card
+                    required.</p>
+
+                <button class="btn">Get Early Access <i class="fa-solid fa-arrow-right"></i></button>
+
+                <p class="bottom-text">Free during early access • No credit card needed</p>
+            </div>
+
+        </section>
     </main>
 </body>
 
