Footer Section Working done

--- a/index.html
+++ b/index.html
@@ -84,29 +84,30 @@
                 </div>
                 <div class="card-content">
                     <div class="card-img">
-                        <img src="./assets/Vector.png" alt="">
+                        <img src="./assets/Bookmarks.png" alt="">
                     </div>
                     <div class="card-title">
-                        <h2>Scattered notes</h2>
-                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                        <h2>Bookmark overload</h2>
+                        <p>Hundreds of saved links you'll never revisit or remember.</p>
                     </div>
                 </div>
                 <div class="card-content">
                     <div class="card-img">
-                        <img src="./assets/Vector.png" alt="">
+                        <img src="./assets/Brain.png" alt="">
                     </div>
                     <div class="card-title">
-                        <h2>Scattered notes</h2>
-                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                        <h2>No idea connections</h2>
+                        <p>Insights stay isolated, never building into bigger understanding.</p>
                     </div>
                 </div>
                 <div class="card-content">
                     <div class="card-img">
-                        <img src="./assets/Vector.png" alt="">
+                        <img src="./assets/Info.png" alt="">
                     </div>
                     <div class="card-title">
-                        <h2>Scattered notes</h2>
-                        <p>Your ideas live in 10 different apps, none of them connected.</p>
+                        <h2>Forgetting what
+                            you learned</h2>
+                        <p>Knowledge fades because there's no system to retain it.</p>
                     </div>
                 </div>
             </div>
@@ -156,7 +157,7 @@
             <div class="bottom-section">
                 <h1>Ready to think more clearly?</h1>
                 <p class="bottom-text">Join thousands of learners who are building their personal knowledge
-                    vaults. Start
+                    vaults. Start
                     free, no credit
                     card
                     required.</p>
@@ -168,6 +169,37 @@
 
         </section>
     </main>
+
+    <!-- Footer Section  -->
+    <footer class="footer">
+
+        <div class="container footer-content">
+            <div class="footer-logo">
+                <img src="./assets/logo-footer.png" alt="">
+            </div>
+
+            <div class="footer-details">
+                <p>Social Links</p>
+                <div class="footer-icon">
+                    <div class="footer-img">
+                        <img src="./assets/x.png" alt="">
+                    </div>
+                    <div class="footer-img">
+                        <img src="./assets/fb.png" alt="">
+                    </div>
+                    <div class="footer-img">
+                        <img src="./assets/in.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr class="container">
+        <div class="container copy-right-text">
+            <p> &copy; 2026 Personal Knowledge Vault. All rights reserved. </p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
